--- a/landing-page.html
+++ b/landing-page.html
@@ -39,7 +39,7 @@
         <li class="nav-item px-3">
           <a class="nav-link" href="#">Work</a>
         </li>
-        <li class="nav-item px-4 bg-danger">
+        <li class="nav-item px-4 btn-danger">
           <a class="nav-link " href="#"><span style="font-size: 24px;" class="iconify" data-icon="akar-icons:download"
               data-inline="false"></span></a>
         </li>
@@ -57,10 +57,10 @@
             Etiam dictum hendrerit dapibus. Pellentesque venenatis mi vitae consequat ornare. Cras sed aliquet felis.
             Nullam interdum semper eros. Nullam mollis, est eget sagittis lobortis, massa eros fermentum dolor
           </p>
-          <button class="btn btn-danger rounded-0 px-7 py-3 d-inline-block">Pre Register</button>
-          <button class="btn btn-white ml-4 rounded-0 px-5 py-3 ">Donate</button>
+          <button class="btn btn-danger rounded-0 mr-5 mb-2 px-7 py-3 d-inline-block">Pre Register</button>
+          <button class="btn btn-white rounded-0 px-5 py-3 mb-2">Donate</button>
         </div>
-        <div class="col-md-6 d-none d-md-block col-12">
+        <div class="col-md-6 col-12">
           <img class="w-100" src="img/Home.png" alt="">
         </div>
       </div>
@@ -88,10 +88,12 @@
       <div class="carousel-item active">
         <img src="img/BnHA.png" alt="Second slide">
         <div class="container text-white position-relative pt-5">
-          <h2 class="mt-5">
+          <div class="col-md-12">
+            <h2 class="mt-5">
             Hotlist Anime
           </h2>
           <div class="red-line"></div>
+          </div>
           <h4 class="col-md-5 pl-0 col-12">
             Boku No Hero Academia Movie 2 : Heroes Rising
           </h4>
@@ -111,10 +113,12 @@
       <div class="carousel-item">
         <img src="img/BnHA.png" alt="Second slide">
         <div class="container text-white position-relative pt-5">
-          <h2 class="mt-5">
+          <div class="col-md-12">
+            <h2 class="mt-5">
             Hotlist Anime
           </h2>
           <div class="red-line"></div>
+          </div>
           <h4 class="col-md-5 pl-0 col-12">
             Boku No Hero Academia Movie 2 : Heroes Rising
           </h4>
@@ -134,10 +138,12 @@
       <div class="carousel-item">
         <img src="img/BnHA.png" alt="Second slide">
         <div class="container text-white position-relative pt-5">
-          <h2 class="mt-5">
+          <div class="col-md-12">
+            <h2 class="mt-5">
             Hotlist Anime
           </h2>
           <div class="red-line"></div>
+          </div>
           <h4 class="col-md-5 pl-0 col-12">
             Boku No Hero Academia Movie 2 : Heroes Rising
           </h4>
@@ -157,10 +163,12 @@
       <div class="carousel-item">
         <img src="img/BnHA.png" alt="Second slide">
         <div class="container text-white position-relative pt-5">
-          <h2 class="mt-5">
+          <div class="col-md-12">
+            <h2 class="mt-5">
             Hotlist Anime
           </h2>
           <div class="red-line"></div>
+          </div>
           <h4 class="col-md-5 pl-0 col-12">
             Boku No Hero Academia Movie 2 : Heroes Rising
           </h4>
@@ -180,10 +188,12 @@
       <div class="carousel-item">
         <img src="img/BnHA.png" alt="Second slide">
         <div class="container text-white position-relative pt-5">
-          <h2 class="mt-5">
+          <div class="col-md-12">
+            <h2 class="mt-5">
             Hotlist Anime
           </h2>
           <div class="red-line"></div>
+          </div>
           <h4 class="col-md-5 pl-0 col-12">
             Boku No Hero Academia Movie 2 : Heroes Rising
           </h4>
@@ -226,7 +236,7 @@
   <div class="features pt-5 text-white">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 mt-5 pt-5 position-relative">
+        <div class="col-md-6 mb-4 mt-5 pt-5 position-relative">
           <h3>Features</h3>
           <div class="red-line"></div>
           <p class="pt-5">
@@ -283,7 +293,7 @@
         </div>
         <div class="col-xl-9">
           <div class="row justify-content-center mx-0">
-            <div class="col-md-4 col-6 mb-4 px-2">
+            <div class="col-md-4 col-12 mb-4 px-2">
               <div class="card-work">
                 <div class="icon d-inline-block mb-4">
                   <span class="iconify" data-icon="cib:laravel" data-inline="false"></span>
@@ -299,7 +309,7 @@
                 <button class="btn btn-danger px-4 rounded-0">Apply</button>
               </div>
             </div>
-            <div class="col-md-4 col-6 mb-4 px-2">
+            <div class="col-md-4 col-12 mb-4 px-2">
               <div class="card-work">
                 <div class="icon d-inline-block mb-4">
                   <span class="iconify" data-icon="cib:vue-js" data-inline="false"></span>
@@ -315,7 +325,7 @@
                 <button class="btn btn-danger px-4 rounded-0">Apply</button>
               </div>
             </div>
-            <div class="col-md-4 col-6 mb-4 px-2">
+            <div class="col-md-4 col-12 mb-4 px-2">
               <div class="card-work">
                 <div class="icon d-inline-block mb-4">
                   <span class="iconify" data-icon="cib:flutter" data-inline="false"></span>
@@ -355,18 +365,18 @@
           <h3 class="mb-5 mt-3">Time go to grand launching</h3>
           <div class="row mx-0 justify-content-center">
             <div class="countDown position-relative mb-4">
-              <div class="time">
-                99
+              <div class="time" id="day" data-toggle="tooltip" data-placement="bottom" title="Day">
+                00
               </div>
             </div>
             <div class="countDown position-relative mx-4 mb-4 ">
-              <div class="time">
-                99
+              <div class="time" id="hour" data-toggle="tooltip" data-placement="bottom" title="Hour">
+                00
               </div>
             </div>
             <div class="countDown position-relative mb-4">
-              <div class="time">
-                99
+              <div class="time" id="minute"  data-toggle="tooltip" data-placement="bottom" title="Minute">
+                00
               </div>
             </div>
           </div>
@@ -448,7 +458,7 @@
           </ul>
         </div>
       </div>
-      <div class="ml-5 pl-5 d-flex" style="z-index: 100;">
+      <div class="copyright d-flex" style="z-index: 100;">
         <img class="" src="img/sidescript.png" alt="">
         <p class="mb-0 ml-4">Developed & Designed By Sidescript</p>
       </div>
@@ -466,6 +476,7 @@
   </script>
 
   <script src="js/slick.js"></script>
+  <script src="js/script.js"></script>
   <script>
     $('.carousel').carousel({
       interval: 30000
