--- a/landing-page.html
+++ b/landing-page.html
@@ -31,13 +31,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto py-0">
         <li class="nav-item px-3 ">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item px-3 ">
-          <a class="nav-link" href="#">Feature</a>
+          <a class="nav-link" href="#features">Feature</a>
         </li>
         <li class="nav-item px-3">
-          <a class="nav-link" href="#">Work</a>
+          <a class="nav-link" href="#work">Work</a>
         </li>
         <li class="nav-item px-4 btn-danger">
           <a class="nav-link " href="#"><span style="font-size: 24px;" class="iconify" data-icon="akar-icons:download"
@@ -107,11 +107,11 @@
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
           </div>
-          <p class="d-inline-block  ml-4">4.8 / 5</p>
+          <p class="d-inline-block  ml-4">4.0 / 5</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/BnHA.png" alt="Second slide">
+        <img src="img/KnY.png" alt="Second slide">
         <div class="container text-white position-relative pt-5">
           <div class="col-md-12">
             <h2 class="mt-5">
@@ -120,10 +120,10 @@
           <div class="red-line"></div>
           </div>
           <h4 class="col-md-5 pl-0 col-12">
-            Boku No Hero Academia Movie 2 : Heroes Rising
+            Demon Slayer Movie : Mugen Train 
           </h4>
           <p class="mt-3">
-            Action, Heroes, Fantasy, Comedy, Scients
+            Action, Demons, Historical, Shounen, Supernatural
           </p>
           <div class="rate mt-5 text-warning d-inline-block">
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
@@ -132,11 +132,11 @@
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
           </div>
-          <p class="d-inline-block  ml-4">4.8 / 5</p>
+          <p class="d-inline-block  ml-4">4.3 / 5</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/BnHA.png" alt="Second slide">
+        <img src="img/dr-stone-s2.png" alt="Second slide">
         <div class="container text-white position-relative pt-5">
           <div class="col-md-12">
             <h2 class="mt-5">
@@ -145,10 +145,10 @@
           <div class="red-line"></div>
           </div>
           <h4 class="col-md-5 pl-0 col-12">
-            Boku No Hero Academia Movie 2 : Heroes Rising
+            Dr Stone : Stone Wars
           </h4>
           <p class="mt-3">
-            Action, Heroes, Fantasy, Comedy, Scients
+             Sci-Fi, Adventure, Comedy, Shounen
           </p>
           <div class="rate mt-5 text-warning d-inline-block">
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
@@ -157,11 +157,11 @@
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
           </div>
-          <p class="d-inline-block  ml-4">4.8 / 5</p>
+          <p class="d-inline-block  ml-4">4.1 / 5</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/BnHA.png" alt="Second slide">
+        <img src="img/snk-s4.png" alt="Second slide">
         <div class="container text-white position-relative pt-5">
           <div class="col-md-12">
             <h2 class="mt-5">
@@ -170,10 +170,10 @@
           <div class="red-line"></div>
           </div>
           <h4 class="col-md-5 pl-0 col-12">
-            Boku No Hero Academia Movie 2 : Heroes Rising
+            Shingeki No Kyojin: The Final Season
           </h4>
           <p class="mt-3">
-            Action, Heroes, Fantasy, Comedy, Scients
+            Action, Military, Mystery, Super Power, Drama, Fantasy, Shounen
           </p>
           <div class="rate mt-5 text-warning d-inline-block">
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
@@ -182,11 +182,11 @@
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
           </div>
-          <p class="d-inline-block  ml-4">4.8 / 5</p>
+          <p class="d-inline-block  ml-4">4.5 / 5</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/BnHA.png" alt="Second slide">
+        <img src="img/jjk-s1.jpg" alt="Second slide">
         <div class="container text-white position-relative pt-5">
           <div class="col-md-12">
             <h2 class="mt-5">
@@ -195,10 +195,10 @@
           <div class="red-line"></div>
           </div>
           <h4 class="col-md-5 pl-0 col-12">
-            Boku No Hero Academia Movie 2 : Heroes Rising
+            Jujutsu Kaisen Season 1
           </h4>
           <p class="mt-3">
-            Action, Heroes, Fantasy, Comedy, Scients
+            Action, Demon, School, Supernatural, Shounen
           </p>
           <div class="rate mt-5 text-warning d-inline-block">
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
@@ -207,13 +207,13 @@
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
             <span class="iconify" data-icon="ant-design:star-filled" data-inline="false"></span>
           </div>
-          <p class="d-inline-block  ml-4">4.8 / 5</p>
+          <p class="d-inline-block  ml-4">4.4 / 5</p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="bg-black py-5">
+  <div class="bg-black py-5" id="about">
     <div class="container py-5">
       <div class="row">
         <div class="col-xl-6 col-12 pb-5 text-center">
@@ -233,7 +233,7 @@
     </div>
   </div>
 
-  <div class="features pt-5 text-white">
+  <div class="features pt-5 text-white" id="features">
     <div class="container">
       <div class="row">
         <div class="col-md-6 mb-4 mt-5 pt-5 position-relative">
@@ -246,7 +246,7 @@
           </p>
           <button class="btn btn-danger rounded-0 px-5 py-3">Request to Dev</button>
         </div>
-        <div class="col-md-5 pt-3 ml-auto justify-content-center features-img d-flex">
+        <div class="col-md-5 pt-4 ml-auto justify-content-center features-img d-flex">
           <div class="d-block mr-2 mt-5 pt-3">
             <div>
               <span class="iconify" data-icon="akar-icons:airplay-video" data-inline="false"></span>
@@ -276,7 +276,7 @@
     </div>
   </div>
 
-  <div class="work text-white">
+  <div class="work text-white" id="work">
     <div class="container">
       <div class="row">
         <div class="col-xl-3">
@@ -365,18 +365,21 @@
           <h3 class="mb-5 mt-3">Time go to grand launching</h3>
           <div class="row mx-0 justify-content-center">
             <div class="countDown position-relative mb-4">
-              <div class="time" id="day" data-toggle="tooltip" data-placement="bottom" title="Day">
-                00
+              <div class="time">
+                <h4 class="mb-0" id="day">00</h4>
+                <span class="mb-0">Day</span>
               </div>
             </div>
             <div class="countDown position-relative mx-4 mb-4 ">
-              <div class="time" id="hour" data-toggle="tooltip" data-placement="bottom" title="Hour">
-                00
+              <div class="time">
+                <h4 class="mb-0" id="hour">00</h4>
+                <span class="mb-0">Hour</span>
               </div>
             </div>
             <div class="countDown position-relative mb-4">
-              <div class="time" id="minute"  data-toggle="tooltip" data-placement="bottom" title="Minute">
-                00
+              <div class="time">
+                <h4 class="mb-0" id="minute">00</h4>
+                <span class="mb-0">Minute</span>
               </div>
             </div>
           </div>
